// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should deauth on 401 on list 1`] = `
Array [
  Array [
    "[1mSetting new deployment using recipe at:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[31mError: authorization expired![39m",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should deauth on 401 on questions list 1`] = `
Array [
  Array [
    "[1mSetting new deployment using recipe at:[22m",
    "http://localhost:8080",
  ],
  Array [
    "[31mError: authorization expired![39m",
    "Please, relogin and try again.",
  ],
]
`;

exports[`Should execute new setup 1`] = `
Array [
  Array [
    "[1mSetting new deployment using recipe at:[22m",
    "http://localhost:8080",
  ],
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "1",
  ],
  Array [
    "2",
  ],
  Array [
    "",
  ],
]
`;
